# cookiecutter-pyproject

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: README.md  mkdocs.yml  noxfile.py  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  main.py
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
