[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.version}}"
description = ""
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]
homepage = "{{cookiecutter.github_url}}"
repository = "{{cookiecutter.github_url}}"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
coverage = {extras = ["toml"], version = "^5.5"}
black = "^21.6b0"
flake8 = "^3.9.2"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^21.4.3"
flake8-comprehensions = "^3.5.0"
flake8-docstrings = "^1.6.0"
flake8-import-order = "^0.18.1"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
pytest-mock = "^3.6.1"
safety = "^1.10.3"
xdoctest = {extras = ["all"], version = "^0.15.5"}
rope = "^0.19.0"
nox = "^2021.6.12"
pep8-naming = "^0.11.1"
bandit = "^1.7.0"
mkdocstrings = "^0.15.2"
mkdocs-material = "^7.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.report]
show_missing = true

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]